# hs-solarized

./: LICENSE  README.md  colour-names-solarized.cabal  solarized.cabal
Data/Colour/: Solarized.hs
Data/Colour/Names/: Solarized.hs
