
name:                colour-names-solarized
version:             0.1.1.0
synopsis:            Solarized colour values
description:         “Solarized” palette colour values
		     .
		     <http://ethanschoonover.com/solarized>
license:             BSD3
license-file:        LICENSE
author:              Antonio Nikishaev
maintainer:          me@lelf.lu
copyright:           2014 (c) Antonio Nikishaev
category:            data, graphics
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  exposed-modules:     Data.Colour.Names.Solarized
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.6, colour >=2.3
  default-language:    Haskell2010

source-repository head
  type:     darcs
  location: http://hub.darcs.net/lelf/hs-solarized

source-repository head
  type:     git
  location: https://github.com/llelf/hs-solarized

